common/thrift/StatestoreService.thrift
@@ -59,42 +59,45 @@ struct TExecutorGroupDesc {
 // all other Impalads in the cluster. Impalads can act as coordinators, executors or
 // both.
 struct TBackendDescriptor {
+  // Unique identifier for this impalad. Generated on startup.
+  1: required Types.TBackendId backend_id;
+
   // Network address of the thrift based ImpalaInternalService on this backend
-  1: required Types.TNetworkAddress address;
+  2: required Types.TNetworkAddress address;
 
   // IP address corresponding to address.hostname. Explicitly including this saves the
   // cost of resolution at every Impalad (since IP addresses are needed for scheduling)
-  2: required string ip_address;
+  3: required string ip_address;
 
   // True if this is a coordinator node
-  3: required bool is_coordinator;
+  4: required bool is_coordinator;
 
   // True if this is an executor node
-  4: required bool is_executor;
+  5: required bool is_executor;
 
   // The address of the debug HTTP server
-  5: optional Types.TNetworkAddress debug_http_address;
+  6: optional Types.TNetworkAddress debug_http_address;
 
   // True if the debug webserver is secured (for correctly generating links)
-  6: optional bool secure_webserver;
+  7: optional bool secure_webserver;
 
   // IP address + port of KRPC based ImpalaInternalService on this backend
-  7: optional Types.TNetworkAddress krpc_address;
+  8: optional Types.TNetworkAddress krpc_address;
 
   // The amount of memory that can be admitted to this backend (in bytes).
-  8: required i64 admit_mem_limit;
+  9: required i64 admit_mem_limit;
 
   // True if fragment instances should not be scheduled on this daemon because the
   // daemon has been quiescing, e.g. if it shutting down.
-  9: required bool is_quiescing;
+  10: required bool is_quiescing;
 
   // The list of executor groups that this backend belongs to. Only valid if is_executor
   // is set, and currently must contain exactly one entry.
-  10: required list<TExecutorGroupDesc> executor_groups;
+  11: required list<TExecutorGroupDesc> executor_groups;
 
   // The number of admission slots for this backend that can be occupied by running
   // queries.
-  11: required i64 admission_slots;
+  12: required i64 admission_slots;
 }
 
 // Description of a single entry in a topic
